# lineturtle

./: CMakeLists.txt  README.md  package.xml
CAD & 3D Printing/STLs to 3D print/: base_plate.STL  battery_plate.STL  esp_plate.STL  led_cover.STL  pen_holder_1.STL  pen_holder_2.STL  servo_mount.STL  shell.STL
CAD & 3D Printing/solidworks model/: ESP.SLDPRT  base_plate.SLDPRT  battery.SLDPRT  battery_plate.SLDPRT  booster_and_charger.SLDPRT  bracket.SLDPRT  button.SLDPRT  caster.SLDPRT  esp_plate.SLDPRT  led_cover.SLDPRT  motor.SLDPRT  motor_driver.SLDPRT  pen.SLDPRT  pen_holder_1.SLDPRT  pen_holder_2.SLDPRT  servo.SLDPRT  servo_link.SLDPRT  servo_mount.SLDPRT  shell.SLDPRT  wheel.SLDPRT
esp32_microros/lineturtle_esp32_microros/: davinci_robot.ino  lineturtle_esp32_microros.ino
launch/: lineturtle_launch.py
scripts/: lineturtle_joy.py
src/: lineturtle_info.cpp
